Create Godot project and add copying information

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@
 
 %YAML 1.2
 ---
+exclude: '^(LEGAL TOOLS|LICENSES)/.*\.txt$'
 repos:
     -
         repo: https://github.com/adrienverge/yamllint
