--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,3 +42,6 @@ repos:
                 # yamllint disable rule:line-length
                 exclude: '^(LEGAL TOOLS|LICENSES)/.*\.txt$|.*\.yaml$|^project/project\.godot$|^project/art/(?!circle).*\.svg$'
                 # yamllint enable
+                # This is a workaround the following issue:
+                # <https://github.com/jumanjihouse/pre-commit-hooks/issues/69>
+                types: ['text']
